--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "node server.js",
-    "render-postbuild": "npm run build"
+    "render-postbuild": "prisma generate && npm run build"
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
